@@ -1,5 +1,11 @@
 2010-08-04  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* win/Makefile.in, win/makefile.bc, win/makefile.vc, win/tcl.dsp:
+	* win/tclWinPipe.c (TclpCreateProcess):
+	* win/stub16.c (removed): removed Win9x tclpip8x.dll build and
+	16-bit application loader stub support.  Win9x is no longer
+	supported.
+
 	* win/tclWin32Dll.c (TclWinInit): hard-enforce Windows 9x as an
 	unsupported platform with a panic.  Code to support it still
 	exists in other files (to go away in time), but new APIs are being
